Bug 1895742 - Return HandledByContent for touches prevented by touch-action. r=botond,geckoview-reviewers,tthibaud, a=dmeehan

Similar to what we did in bug 1785754, specifically in
hg.mozilla.org/integration/autoland/rev/e05ed4cedf9f , but not eager cases.

Differential Revision: https://phabricator.services.mozilla.com/D212487